# Test

./: .env.example  .gitignore  README.md  pyproject.toml
api/core/: exceptions.py  helper.py  managers.py  mixin.py  models.py  pagination.py  permissions.py  serializers.py  validators.py
api/core/management/commands/: default_model.txt  default_serializer.txt  default_urls.txt  default_view.txt  make_crud.py
api/fixtures/: campaigns.json  contact_groups.json  contacts.json  user_data.json
api/games/: models.py  serializers.py  urls.py  views.py
api/games/migrations/: 0001_initial.py  0002_remove_gameresult_responses.py  0003_gameresult_responses.py  0004_gameresult_answered_questions.py  0005_gameresult_earned_points.py  0006_gameresult_is_active.py
api/nomenclatures/: models.py  serializers.py  urls.py  views.py
api/nomenclatures/migrations/: 0001_initial.py  0002_auto_20211008_1452.py  0003_auto_20211008_1631.py  0004_response_game.py
api/users/: models.py  serializers.py  urls.py  views.py
api/users/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
mediafiles/: 1-2021-09-15T21:44:47.975388+03:00  test.csv
seeds/: users.json
